# hashify

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  Readme.md
.github/workflows/: rust.yml
src/: main.rs
