[package]
name = "hashify"
version = "1.3.2"
authors = ["Dominik 'Rengyr' Kosík <of@rengyr.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
crc32fast = "^1.2.1"
same-file = "^1.0.6"
byte-unit = "^4.0.12"

[dev-dependencies]
tempdir = "0.3"